@@ -57,6 +57,7 @@ All (GUI):
 - Improve auto sizing of wrapped cells in wxGrid (iwbnwif).
 - Fix handling of rectangular selections in wxStyledTextCtrl (roberto).
 - Fix characters outside of the BMP in wxStyledTextCtrl (Thomas Goyne).
+- Allow access to the currently shown wxInfoBar buttons (Hanmac).
 
 wxGTK:
 
